[tool.poetry]
name = "hw-1-1"
version = "1"
description = "desc"
authors = ["kyrylo"]
license = "None"
readme = "README.md"
packages = [{include = "hw_1"}]

[tool.poetry.dependencies]
python = "3.12"
aiosqlite = "^0.20.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
